[gd_scene load_steps=7 format=3 uid="uid://dcrh34va1t76v"]

[ext_resource type="Texture2D" uid="uid://cvde8ww2sj5co" path="res://Sprites/customsdec-Sheet.png" id="1_33ewx"]
[ext_resource type="Script" path="res://Scenes/doctest.gd" id="2_js6cy"]
[ext_resource type="FontFile" uid="uid://c8dolumhrfhc2" path="res://Sprites/W95FA.ttf" id="3_x324e"]
[ext_resource type="FontFile" uid="uid://c6dv2q4s6gd5p" path="res://Sprites/Fpreuss.tres" id="4_g86e6"]
[ext_resource type="LabelSettings" uid="uid://csra5s7s851xx" path="res://Sprites/label.tres" id="4_l1g37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gofhi"]
size = Vector2(291, 268)

[node name="Doctest" type="Sprite2D"]
texture_filter = 3
position = Vector2(1.90735e-06, -5.96046e-08)
texture = ExtResource("1_33ewx")
hframes = 3
region_rect = Rect2(10, 10, 291, 268)
script = ExtResource("2_js6cy")

[node name="NameLabel" type="Label" parent="."]
texture_filter = 3
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.263
anchor_right = 0.52
anchor_bottom = 0.263
offset_left = -148.88
offset_top = -148.01
offset_right = -69.88
offset_bottom = -125.01
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x324e")
label_settings = ExtResource("4_l1g37")
justification_flags = 0
metadata/_edit_use_anchors_ = true

[node name="NationalityLabel" type="Label" parent="."]
texture_filter = 3
anchors_preset = -1
anchor_left = 0.577
anchor_top = 0.643
anchor_right = 0.577
anchor_bottom = 0.643
offset_left = -151.638
offset_top = -145.61
offset_right = -73.638
offset_bottom = -124.61
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x324e")
label_settings = ExtResource("4_l1g37")
justification_flags = 0
metadata/_edit_use_anchors_ = true

[node name="ItemLabel" type="Label" parent="."]
texture_filter = 3
anchors_preset = -1
anchor_left = 0.336599
anchor_top = 0.4
anchor_right = 0.34
anchor_bottom = 0.4
offset_left = -146.96
offset_top = -143.0
offset_right = -84.96
offset_bottom = -127.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_x324e")
label_settings = ExtResource("4_l1g37")
justification_flags = 0
metadata/_edit_use_anchors_ = true

[node name="ValueLabel" type="Label" parent="."]
texture_filter = 3
anchors_preset = -1
anchor_left = 0.605
anchor_top = 0.761
anchor_right = 0.605
anchor_bottom = 0.761
offset_left = -146.87
offset_top = -144.47
offset_right = -104.87
offset_bottom = -125.47
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_g86e6")
label_settings = ExtResource("4_l1g37")
justification_flags = 0
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_gofhi")

[node name="Modulated" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Pisca" type="Timer" parent="."]
wait_time = 0.3

[connection signal="body_entered" from="Area2D" to="." method="_on_folder_"]
[connection signal="timeout" from="Modulated" to="." method="_on_modulated_timeout"]
[connection signal="timeout" from="Pisca" to="." method="_on_pisca_timeout"]
